--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ overflow: hidden;
     flex: 1;
     border-radius: 1rem;
     overflow: auto;
+    padding: 0 1rem 0 1rem ;
 }
 
 .music-player{
@@ -130,10 +131,59 @@ a{
     height: 2rem;
     width: fit-content;
 }
+
+.dark-badge{
+    background-color: black;
+    color: white;
+}
 .sticky-nav{
     position: sticky;
     top: 0;
     background-color: #121212;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+}
+
+.sticky-nav-icons i{
+    margin-left: 0.75rem;
+}
+
+.sticky-nav-options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sticky-nav-options button{
+    margin-right: 1rem;
+}
+
+@media (max-width:1000px){
+    .hide{
+        display: none;
+    }
+}
+.card{
+    background-color: #232323;
+    width: 150px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+}
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card-img{
+    width: 100%;
+    border-radius: 0.5rem;
+}
+.card-title{
+    font-weight: 600;
+}
+.card-info{
+    opacity: 0.7;
+    font-size: 0.75rem;
 }
